Add image upload method
